; ModuleID = '/home/carl/AnghaBench/robotjs/src/extr_bitmap_find.c_findBitmapInRect.c'
source_filename = "/home/carl/AnghaBench/robotjs/src/extr_bitmap_find.c_findBitmapInRect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MMPointZero = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @findBitmapInRect(i32 %0, i32 %1, i32* %2, i32 %3, float %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca float, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store float %4, float* %10, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @initBadShiftTable(i32* %11, i32 %13)
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* %7, align 4
  %17 = load i32*, i32** %8, align 8
  %18 = load i32, i32* %9, align 4
  %19 = load float, float* %10, align 4
  %20 = load i32, i32* @MMPointZero, align 4
  %21 = call i32 @findBitmapInRectAt(i32 %15, i32 %16, i32* %17, i32 %18, float %19, i32 %20, i32* %11)
  store i32 %21, i32* %12, align 4
  %22 = call i32 @destroyBadShiftTable(i32* %11)
  %23 = load i32, i32* %12, align 4
  ret i32 %23
}

declare dso_local i32 @initBadShiftTable(i32*, i32) #1

declare dso_local i32 @findBitmapInRectAt(i32, i32, i32*, i32, float, i32, i32*) #1

declare dso_local i32 @destroyBadShiftTable(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
